2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Define `cmdid', `main' directly.

	* ci.c (cmdid, main): Define directly.
	* co.c (cmdid, main): Likewise.
	* ident.c (cmdid, main): Likewise.
	* merge.c (cmdid, main): Likewise.
	* rcs.c (cmdid, main): Likewise.
	* rcsclean.c (cmdid, main): Likewise.
	* rcsdiff.c (cmdid, main): Likewise.
	* rcsmerge.c (cmdid, main): Likewise.
	* rlog.c (cmdid, main): Likewise.
	* rcsbase.h (mainProg): Delete macro.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Say "register int c", not just "register c".

	* rcxlex.c (nextlex, readstring)
	(printstring, savestring): Say "register int c".
	* rcsedit.c (copystring, expandline): Likewise.
	* rcs.c (getaccessor, getstates): Likewise.
	* rcsdiff.c (main): Likewise.
	* rlog.c (getauthor): Likewise.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use Standard C syntax for function definitions.

	* ci.c: Throughout, use Standard C syntax for function definitions.
	* co.c: Likewise.
	* ident.c: Likewise.
	* maketime.c: Likewise.
	* merge.c: Likewise.
	* merger.c: Likewise.
	* partime.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcskeys.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmerge.c: Likewise.
	* rcsrev.c: Likewise.
	* rcssyn.c: Likewise.
	* rcstime.c: Likewise.
	* rcsutil.c: Likewise.
	* rlog.c: Likewise.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ANSI prototypes.

	Abbreviations:
	D: "Don't use `P (PROTOTYPE)', just use PROTOTYPE directly."
	P: "For #if has_prototypes FOO #else BAR #endif blocks,
	replace block with simply FOO."

	* maketime.h (__MAKETIME_P): Delete macro;
	update callers to use its arg directly.
	* partime.h (__PARTIME_P): Likewise.
	* ci.c: D; P.
	* co.c: D.
	* ident.c: D.
	* maketime.c: D.
	* merge.c: D.
	* merger.c: D.
	* partime.c: D.
	* rcs.c: D.
	* rcsbase.h: D.